--- a/model_compaison_crossval.ipynb
+++ b/model_compaison_crossval.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgU8sY235PZT/3n9IXyeLx",
+      "authorship_tag": "ABX9TyO1WesN5YAwl16oUA+Ph0Oa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,22 +48,26 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import cross_val_score, cross_val_predict, StratifiedKFold\n",
         "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
         "iris = load_iris()\n",
         "X = iris.data\n",
-        "y = iris.target"
+        "y = iris.target\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)"
       ],
       "metadata": {
         "id": "KNs4QmR4kXGw"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "models = {\n",
-        "  'Logistic Regression': LogisticRegression(),\n",
+        "  'Logistic Regression': LogisticRegression(max_iter = 1000),\n",
         "  'SVM': SVC(),\n",
         "  'Naive Bayes': GaussianNB(),\n",
         "  'Decision Tree': DecisionTreeClassifier(),\n",
@@ -85,32 +89,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ED0rb930kqb4",
-        "outputId": "6956af56-b647-447e-a339-6f3b29b8c1d6"
+        "outputId": "593ea965-bdba-4045-ff0c-3e06da839ba4"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -135,7 +117,7 @@
             "[[50  0  0]\n",
             " [ 0 48  2]\n",
             " [ 0  3 47]]\n",
-            "Random Forest Cross-Validation Score: 96.00000000000001 (+/- 0.06531972647421806)\n",
+            "Random Forest Cross-Validation Score: 96.0 (+/- 0.04988876515698587)\n",
             "Random Forest Confusion Matrix:\n",
             "[[50  0  0]\n",
             " [ 0 47  3]\n",
